# baTaskManager

./: README.md
agents/: .env.example  .gitignore  README.md  config.py  pyproject.toml  requirements.txt  schemas.py
agents/examples/: 01_sso_login_loop.json  02_stripe_webhook_billing_desync.json  03_email_notifications_missing.json  04_search_returns_no_results.json  05_csv_export_timezone_off_by_one.json  06_slack_integration_disconnects.json
agents/prompts/: ba_system_prompt.md  ba_user_prompt_template.md
agents/src/: ba_agent.py  lm_studio_client.py  prompt_builder.py  runner.py  subtask.py
agents/tasks/001_safari_saved_filters/: task.md
agents/tasks/001_safari_saved_filters/subtasks/: 01_restate.json
agents/tests/: test_ba_agent_parsing.py  test_prompt_builder.py  test_schemas.py  test_subtask_loading.py
backend/TaskManager/: Program.cs  appsettings.json
backend/TaskManager/Controllers/: AgentController.cs  SubtaskRunsController.cs  SubtasksController.cs
backend/TaskManager/Data/: AppDbContext.cs
backend/TaskManager/Models/: Subtask.cs  SubtaskDto.cs  SubtaskRun.cs
backend/TaskManager/Services/: AgentSeeder.cs  LMStudioClient.cs  LMStudioOptions.cs
docs/: Local AI Agent System Plan.docx
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/api/: agent.ts
frontend/src/components/: TaskCard.tsx  TaskDetailModal.tsx
frontend/src/types/: agent.ts
